feat: CUBRID 지원 추가 및 버그 수정, 문서 업데이트
- CUBRID 호환성을 위한 CubridDialect 추가 (Sequence 지원)
- 엔티티 ID 생성 전략을 IDENTITY에서 SEQUENCE로 변경
- RefreshToken UUID 매핑 문제 수정 (@JdbcTypeCode 적용)
- CUBRID용 DDL 스크립트(schema.sql) 추가
- application.yml 설정 변경 (CUBRID 프로필, 초기화 모드 never)
- 운영 가이드(OPERATION_GUIDE.md) 생성 및 문서 업데이트 (README, DATABASE, HISTORY)
- .gitignore에 nohup.out 추가

--- a/docs/HISTORY_20251202.md
+++ b/docs/HISTORY_20251202.md
@@ -66,6 +66,18 @@
   - 변경 이력 목록에서 긴 텍스트(요청내용 등)는 아코디언 형태로, 짧은 정보(연락처 등)는 한 줄로 표시되도록 UI 개선.
 - **용어 변경**: SR 상세 화면의 '생성일' 라벨을 **'등록일(접수일)'**로 변경하여 의미 명확화.
 
+### 7. 시스템 설정 및 트러블슈팅 (System Configuration & Troubleshooting)
+- **CUBRID 데이터베이스 연동 이슈 해결**:
+  - **문제**: Spring Boot 3.x (Hibernate 6.x) 환경에서 CUBRID 연결 시 `ClassNotFoundException: org.hibernate.dialect.CUBRIDDialect` 및 스키마 조회 오류(`Unknown class "information_schema.sequences"`) 발생.
+  - **원인**: Hibernate 6.x 버전과 CUBRID JDBC 드라이버 간의 Dialect 호환성 문제 (기본 Dialect 부재 및 메타데이터 조회 쿼리 불일치).
+  - **해결**: `MySQLDialect`를 상속받은 커스텀 `CubridDialect` (`com.srmanagement.config.CubridDialect`) 구현 및 `application.yml` 설정 적용.
+- **ID 생성 전략 변경 (IDENTITY -> SEQUENCE)**:
+  - **문제**: 로그인/회원가입 시 `NullPointerException` 발생 (CUBRID JDBC 드라이버의 `getGeneratedKeys` 미지원/버그).
+  - **해결**: JPA ID 생성 전략을 `IDENTITY`에서 `SEQUENCE`(`SERIAL`)로 변경하고, `CubridDialect`에 `SequenceSupport` 구현 추가. `schema.sql`을 통해 수동으로 테이블 및 시퀀스 생성.
+- **UUID 타입 변환 오류 해결**:
+  - **문제**: 재로그인 시 `RefreshToken` 조회 중 `Type conversion error` 발생 (DB의 `VARCHAR`와 Java의 `UUID` 간 매핑 실패).
+  - **해결**: `RefreshToken` 엔티티의 ID 필드에 `@JdbcTypeCode(SqlTypes.VARCHAR)` 어노테이션 추가.
+
 ---
 
 ## 이전 변경 사항 (요약)
