docs: Refresh Token 동시성 이슈 및 H2 초기화 오류 해결 내용 추가

--- a/docs/HISTORY_20251202.md
+++ b/docs/HISTORY_20251202.md
@@ -77,6 +77,20 @@
 - **UUID 타입 변환 오류 해결**:
   - **문제**: 재로그인 시 `RefreshToken` 조회 중 `Type conversion error` 발생 (DB의 `VARCHAR`와 Java의 `UUID` 간 매핑 실패).
   - **해결**: `RefreshToken` 엔티티의 ID 필드에 `@JdbcTypeCode(SqlTypes.VARCHAR)` 어노테이션 추가.
+- **Refresh Token 중복 및 동시성 이슈 해결**:
+  - **문제**: 스크립트 테스트 등 빠른 연속 요청 시 `500 Internal Server Error` 발생 (`Unique constraint violation: u_refresh_tokens_token`).
+  - **원인**: 토큰 생성 로직이 시간(초)에만 의존하여 동일한 토큰이 생성됨. 또한, `delete` 후 `insert` 시점의 플러시 지연으로 인한 경합 발생.
+  - **해결**: 
+    1. `JwtTokenProvider`에서 토큰 생성 시 랜덤 UUID(`jti`)를 포함하여 유일성 보장.
+    2. `AuthService`에서 기존 토큰 삭제 후 즉시 `flush()` 호출하여 DB 반영 보장.
+    3. H2 DB 시작 시 CUBRID 전용 SQL 실행 방지를 위해 `schema.sql`을 `schema-cubrid.sql`로 변경.
+- **Refresh Token 중복 및 동시성 이슈 해결**:
+  - **문제**: 스크립트 테스트 등 빠른 연속 요청 시 `500 Internal Server Error` 발생 (`Unique constraint violation: u_refresh_tokens_token`).
+  - **원인**: 토큰 생성 로직이 시간(초)에만 의존하여 동일한 토큰이 생성됨. 또한, `delete` 후 `insert` 시점의 플러시 지연으로 인한 경합 발생.
+  - **해결**: 
+    1. `JwtTokenProvider`에서 토큰 생성 시 랜덤 UUID(`jti`)를 포함하여 유일성 보장.
+    2. `AuthService`에서 기존 토큰 삭제 후 즉시 `flush()` 호출하여 DB 반영 보장.
+    3. H2 DB 시작 시 CUBRID 전용 SQL 실행 방지를 위해 `schema.sql`을 `schema-cubrid.sql`로 변경.
 
 ---
 
