feat: 프론트엔드 Mock 데이터 강화 및 모달 버그 수정

--- a/docs/HISTORY_20251204.md
+++ b/docs/HISTORY_20251204.md
@@ -12,3 +12,10 @@
 - **H2 Console 접근 허용**:
   - Spring Security 설정(`SecurityConfig.java`) 수정.
   - `/h2-console/**` 경로에 대한 접근 허용, CSRF 비활성화, X-Frame-Options(SAMEORIGIN) 허용.
+
+### 2. 프론트엔드 (Frontend)
+- **Mock 데이터 강화**:
+  - `VITE_USE_MOCK=true`를 기본값으로 설정하여 개발 편의성 증대.
+  - OPEN API 현황조사 초기 Mock 데이터(`INITIAL_SURVEY_LIST`) 추가 및 로컬 스토리지 연동 로직 개선.
+- **버그 수정**:
+  - `OrganizationSearchModal` 컴포넌트에서 조건부 Hook 호출 위반 문제 해결 (`useEffect` 위치 조정).
