--- a/docs/HISTORY_20251204.md
+++ b/docs/HISTORY_20251204.md
@@ -19,3 +19,14 @@
   - OPEN API 현황조사 초기 Mock 데이터(`INITIAL_SURVEY_LIST`) 추가 및 로컬 스토리지 연동 로직 개선.
 - **버그 수정**:
   - `OrganizationSearchModal` 컴포넌트에서 조건부 Hook 호출 위반 문제 해결 (`useEffect` 위치 조정).
+
+### 3. 백엔드 리팩토링 및 DB 초기화 설정 (Backend Refactoring & DB Reset)
+- **DB 초기화 정책 변경**:
+  - `application.yml`의 `spring.jpa.hibernate.ddl-auto` 옵션을 `create`로 변경.
+  - 서버 시작 시마다 기존 테이블을 삭제하고 새로 생성하여 데이터 정합성 보장 (파일 모드 유지).
+- **Entity 매핑 개선 (`OpenApiSurvey`)**:
+  - `DuplicateMappingException` 해결: `organizationCode` 컬럼에 대해 읽기 전용(`insertable=false, updatable=false`) 설정.
+  - `Organization` 엔티티와의 `@ManyToOne` 관계 매핑 추가.
+- **서비스/리포지토리 리팩토링**:
+  - `OpenApiSurveyRepository`: 삭제된 필드 대신 `Organization`을 조인(JOIN)하여 검색하도록 JPQL 수정.
+  - `OpenApiSurveyService`: 단순 문자열 코드 대신 엔티티 객체 관계를 활용하도록 로직 전면 수정.
