리팩토링: 기관명(Name) 대신 기관코드(Code) 기반으로 구조 변경 (Backend/Frontend/Docs 반영)

--- a/docs/HISTORY_20251204.md
+++ b/docs/HISTORY_20251204.md
@@ -30,3 +30,16 @@
 - **서비스/리포지토리 리팩토링**:
   - `OpenApiSurveyRepository`: 삭제된 필드 대신 `Organization`을 조인(JOIN)하여 검색하도록 JPQL 수정.
   - `OpenApiSurveyService`: 단순 문자열 코드 대신 엔티티 객체 관계를 활용하도록 로직 전면 수정.
+
+### 4. 기관 관리 구조 변경 (Organization Management Refactoring)
+- **기관명(Name) → 기관코드(Code) 중심 설계 변경**:
+  - 기존: 설문(`OpenApiSurvey`) 테이블에 기관명(`organizationName`)을 직접 저장.
+  - 변경: 기관 표준 코드(`organizationCode`)를 저장하고, `Organization` 테이블과 관계(FK)를 맺어 관리.
+  - 목적: 데이터 정합성 확보 및 기관명 변경 시 유연한 대응.
+- **DTO 및 API 수정**:
+  - `OpenApiSurveyCreateRequest`: `organizationName` 필드 삭제, `organizationCode` 필드 필수화.
+  - `OpenApiSurveyResponse`: `organization` 객체를 포함하여 코드와 이름을 함께 반환하도록 구조 변경.
+- **프론트엔드 연동 수정**:
+  - `SurveyForm`: 기관 검색 모달을 통해 선택된 기관의 '코드'를 전송하도록 수정.
+  - `SurveyList`: 응답받은 `organization` 객체에서 이름을 추출하여 표시하도록 수정.
+  - `types/index.ts`: `OpenApiSurvey` 인터페이스 타입 정의 업데이트.
