--- a/docs/HISTORY_20251204.md
+++ b/docs/HISTORY_20251204.md
@@ -43,3 +43,20 @@
   - `SurveyForm`: 기관 검색 모달을 통해 선택된 기관의 '코드'를 전송하도록 수정.
   - `SurveyList`: 응답받은 `organization` 객체에서 이름을 추출하여 표시하도록 수정.
   - `types/index.ts`: `OpenApiSurvey` 인터페이스 타입 정의 업데이트.
+
+### 5. CSV 일괄 등록 기능 구현 (CSV Bulk Upload)
+- **백엔드**:
+  - `opencsv` 라이브러리 추가 (`pom.xml`).
+  - `OpenApiSurveyController`: `/api/surveys/upload` 엔드포인트 추가.
+  - `OpenApiSurveyService`: CSV 파싱, 기관명 검증, 일괄 등록 로직(`bulkCreateSurveys`) 구현.
+  - `BulkUploadResult` DTO 추가: 성공/실패 건수 및 실패 상세 사유 반환.
+- **프론트엔드**:
+  - `CsvUploadModal` 컴포넌트 구현: 드래그 앤 드롭 지원, 결과 요약 및 실패 목록 표시.
+  - 프로젝트 표준 CSS(`App.css`)를 준수하도록 UI 스타일링 (Tailwind CSS 제거).
+  - `surveyService`: 파일 업로드 API 연동.
+
+### 6. 버그 수정 및 안정화 (Bug Fixes & Stabilization)
+- **LazyInitializationException 해결**:
+  - 문제: `OpenApiSurveyResponse`가 `Organization` 엔티티를 직접 참조하여 JSON 변환 시 세션 없음 오류 발생.
+  - 해결: `OrganizationResponse` DTO를 신규 생성하고, 응답 객체가 엔티티 대신 DTO를 포함하도록 구조 변경.
+- **컴파일 오류 수정**: `OpenApiSurveyController`의 누락된 `MultipartFile` import 추가.
