--- a/docs/HISTORY_20251204.md
+++ b/docs/HISTORY_20251204.md
@@ -60,3 +60,27 @@
   - 문제: `OpenApiSurveyResponse`가 `Organization` 엔티티를 직접 참조하여 JSON 변환 시 세션 없음 오류 발생.
   - 해결: `OrganizationResponse` DTO를 신규 생성하고, 응답 객체가 엔티티 대신 DTO를 포함하도록 구조 변경.
 - **컴파일 오류 수정**: `OpenApiSurveyController`의 누락된 `MultipartFile` import 추가.
+
+### 7. 인증 및 보안 개선 (Authentication & Security)
+- **인증 실패 응답 코드 변경**:
+  - 기존: 인증 실패 시 `403 Forbidden` 반환.
+  - 변경: `401 Unauthorized` 반환으로 수정.
+  - 목적: 프론트엔드 Axios 인터셉터가 401 응답을 감지하여 토큰 갱신(Refresh Token) 로직을 정상적으로 수행하도록 개선.
+
+### 8. 설문 조사 기능 고도화 (Survey Feature Enhancements)
+- **'미회신' 상태 관리 추가**:
+  - 모든 선택(Select) 항목에 '미회신(NO_RESPONSE)' 옵션 추가.
+  - CSV 업로드 시 값이 비어있는 경우 기본값으로 '미회신' 또는 '미입력' 자동 할당.
+  - 수정 화면에서 '미회신' 또는 '미입력' 항목은 붉은색 배경/텍스트로 강조 표시하여 식별 용이성 증대.
+- **CSV 업로드 처리 개선**:
+  - **날짜 포맷 지원 확대**: `yyyy-MM-dd` 외에 `yyyy.MM.dd` 형식의 날짜 문자열도 자동 변환하여 처리.
+  - **유효성 검증 강화**: 업로드 시 각 필드의 길이(Length)를 DB 스키마와 대조하여 검증하는 로직 추가. 길이 초과 시 명확한 에러 메시지 반환.
+- **타입 정의 수정**:
+  - 프론트엔드 `OpenApiSurveyCreateRequest` 인터페이스의 `organizationCode` 타입 불일치 문제 해결.
+
+### 9. 데이터베이스 스키마 변경 (Database Schema Changes)
+- **연락처 컬럼 길이 확장**:
+  - 테이블: `open_api_survey`
+  - 컬럼: `contact_phone`
+  - 변경: `VARCHAR(20)` → `VARCHAR(30)`
+  - 사유: 다수의 전화번호나 긴 연락처 정보를 수용하기 위함.
