--- a/docs/HISTORY_20251204.md
+++ b/docs/HISTORY_20251204.md
@@ -84,3 +84,23 @@
   - 컬럼: `contact_phone`
   - 변경: `VARCHAR(20)` → `VARCHAR(30)`
   - 사유: 다수의 전화번호나 긴 연락처 정보를 수용하기 위함.
+
+### 10. 공통코드 관리 기능 구현 (Common Code Management)
+- **백엔드**:
+  - `CommonCodeRepository`: 코드 그룹 목록 조회 기능(`findDistinctCodeGroups`) 추가.
+  - `CommonCodeService`, `CommonCodeController`: 코드 그룹 목록 조회 API 엔드포인트(`/api/common-codes/groups`) 구현.
+- **프론트엔드**:
+  - **관리 페이지 신설**: `CommonCodePage` (경로: `/admin/codes`).
+  - **컴포넌트 구현**:
+    - `CommonCodeList`: 그룹별 코드 목록 조회 및 삭제.
+    - `CommonCodeForm`: 코드 그룹 및 코드 추가/수정 모달.
+  - **UI 연동**:
+    - `Sidebar`: 관리자(ADMIN) 권한인 경우 '공통코드 관리' 메뉴 표시.
+    - `App.tsx`: 라우트 설정 추가.
+
+### 11. 버그 수정 (Bug Fixes)
+- **검색 모달 상태 동기화 문제 해결**:
+  - 증상: `SurveySearchModal`에서 검색어 입력 후 닫았다가 다시 열면 이전 검색어가 남아있는 현상.
+  - 해결:
+    - `SurveySearchModal`: `initialKeyword` prop이 변경될 때 내부 상태(`keyword`)를 업데이트하도록 `useEffect` 추가.
+    - `SrForm`: 모달을 닫을 때 부모 컴포넌트의 상태(`modalInitialKeyword`)를 초기화하도록 수정.
