사용자 관리 리팩토링: 공개 회원가입 제거, 관리자 전용 생성 추가, 삭제 로직 수정 및 문서 업데이트

--- a/docs/HISTORY_20251204.md
+++ b/docs/HISTORY_20251204.md
@@ -104,3 +104,16 @@
   - 해결:
     - `SurveySearchModal`: `initialKeyword` prop이 변경될 때 내부 상태(`keyword`)를 업데이트하도록 `useEffect` 추가.
     - `SrForm`: 모달을 닫을 때 부모 컴포넌트의 상태(`modalInitialKeyword`)를 초기화하도록 수정.
+
+### 12. 사용자 관리 리팩토링 및 안정화 (User Management Refactoring & Stabilization)
+- **공개 회원가입 제거**:
+  - 보안 강화를 위해 누구나 가입 가능한 `/auth/register` 엔드포인트 및 관련 프론트엔드 페이지 제거.
+  - 사용자 관리는 관리자(Admin)에 의한 등록 방식으로 전환.
+- **관리자 전용 사용자 생성 구현**:
+  - `POST /api/users` 엔드포인트 구현.
+  - `DataInitializer` 추가: 서버 최초 실행 시 기본 관리자 계정(`admin`/`admin123`) 자동 생성.
+- **사용자 삭제 로직 개선**:
+  - **참조 무결성 보장**: 사용자가 등록했거나 담당자로 지정된 SR이 있는 경우 삭제를 차단하는 유효성 검사 추가.
+  - **FK 제약조건 해결**: 사용자 삭제 시 연관된 Refresh Token을 먼저 삭제하여 `DataIntegrityViolationException` 방지.
+- **테스트 스크립트 보완**:
+  - `backend_test_script.sh`: 회원가입 단계 제거, 기본 관리자 계정 사용, 데이터 의존성(설문 생성 후 조회) 해결.
